--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "gatsby-plugin-sass": "^2.1.29",
     "node-sass": "^4.13.1",
     "react": "^16.12.0",
-    "react-dom": "^16.12.0"
+    "react-dom": "^16.12.0",
+    "react-icons": "^3.9.0"
   },
   "devDependencies": {
     "prettier": "^1.19.1"
