--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
   },
   "dependencies": {
+    "dotenv": "^8.2.0",
     "gatsby": "^2.19.7",
     "gatsby-image": "^2.2.43",
     "gatsby-plugin-prefetch-google-fonts": "^1.4.3",
@@ -21,6 +22,7 @@
     "gatsby-plugin-sass": "^2.1.29",
     "gatsby-plugin-sharp": "^2.4.7",
     "gatsby-source-filesystem": "^2.1.50",
+    "gatsby-source-graphql": "^2.1.34",
     "gatsby-transformer-sharp": "^2.3.17",
     "node-sass": "^4.13.1",
     "react": "^16.13.0",
