--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-dom": "^16.13.0",
     "react-helmet": "^5.2.1",
     "react-icons": "^3.9.0",
+    "react-switch": "^5.0.1",
     "styled-components": "^5.0.1"
   },
   "devDependencies": {
