--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "gatsby-plugin-styled-components": "^3.1.20",
     "gatsby-source-filesystem": "^2.1.50",
     "gatsby-source-graphql": "^2.1.34",
+    "gatsby-transformer-remark": "^2.6.58",
     "gatsby-transformer-sharp": "^2.3.17",
     "intersection-observer": "^0.7.0",
     "node-sass": "^4.13.1",
