--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "node-sass": "^4.13.1",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
+    "react-google-recaptcha": "^2.0.1",
     "react-helmet": "^5.2.1",
     "react-icons": "^3.9.0",
     "react-switch": "^5.0.1",
