--- a/package.json
+++ b/package.json
@@ -14,7 +14,6 @@
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
   },
   "dependencies": {
-    "@nicky-yim/react-switch": "^5.1.0",
     "babel-plugin-styled-components": "^1.10.7",
     "dotenv": "^8.2.0",
     "gatsby": "^2.19.45",
@@ -36,6 +35,7 @@
     "react-dom": "^16.13.0",
     "react-helmet": "^5.2.1",
     "react-icons": "^3.9.0",
+    "react-switch": "^5.0.1",
     "styled-components": "^5.0.1"
   },
   "devDependencies": {
